k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: expense-logger
  labels:
    name: expense-logger
