k8s/03-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: expense-logger
  labels:
    app: postgres
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
